--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.css">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="assets/style.css">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -79,21 +79,21 @@
 		<div class="card">
 			<img class="card__image"src="https://source.unsplash.com/category/nature/400x260" alt="Nature">
 			<div class="card__copy">
-				<h3>Title Card</h3>
+				<h3>Cats Card</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis sequi incidunt optio, asperiores dolorum ratione excepturi. </p>
 			</div>
 		</div>
 		<div class="card">
 			<img class="card__image"src="https://source.unsplash.com/category/food/400x260" alt="Nature">
 			<div class="card__copy">
-				<h3>Title Card</h3>
+				<h3>Cats Card</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis sequi incidunt optio, asperiores dolorum ratione excepturi. </p>
 			</div>
 		</div>
 		<div class="card">
 			<img class="card__image"src="https://source.unsplash.com/category/people/400x260" alt="Nature">
 			<div class="card__copy">
-				<h3>Title Card</h3>
+				<h3>Cats Card</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis sequi incidunt optio, asperiores dolorum ratione excepturi. </p>
 			</div>
 		</div>
