--- a/single.html
+++ b/single.html
@@ -53,13 +53,13 @@
 
 
 	<section class="cards clearfix">
-		<div class="card">
+		<!-- <div class="card">
 			<img class="card__image"src="https://source.unsplash.com/category/nature/400x260" alt="Nature">
 			<div class="card__copy">
 				<h3>Title Card</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis sequi incidunt optio, asperiores dolorum ratione excepturi. </p>
 			</div>
-		</div>
+		</div> -->
 		<div class="card">
 			<img class="card__image"src="https://source.unsplash.com/category/food/400x260" alt="Nature">
 			<div class="card__copy">
@@ -67,13 +67,13 @@
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis sequi incidunt optio, asperiores dolorum ratione excepturi. </p>
 			</div>
 		</div>
-		<div class="card">
+		<!-- <div class="card">
 			<img class="card__image"src="https://source.unsplash.com/category/people/400x260" alt="Nature">
 			<div class="card__copy">
 				<h3>Title Card</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis sequi incidunt optio, asperiores dolorum ratione excepturi. </p>
 			</div>
-		</div>
+		</div> -->
 	</section>
 
 
