Add login button

--- a/index.html
+++ b/index.html
@@ -34,8 +34,12 @@
 			<div class="cover__caption__copy">
 				<h1>Primary message of the Home </h1>
 				<h2>Subtitle of the home page</h2>
-				<a href="" class="button"> Call to action</a>
+				<a href="" class="button"> register</a>
+				<a href="" class="button"> login</a>
+
+				
 			</div>
+
 		</div>
 	</section>
 
