--- a/index.html
+++ b/index.html
@@ -27,21 +27,7 @@
 			<li class="header__menu__item"><a href="">Item</a></li>
 		</ul>
 	</header>
-
-	<section class="cover">
-		<div class="cover__filter"></div>
-		<div class="cover__caption">
-			<div class="cover__caption__copy">
-				<h1>Primary message of the Home </h1>
-				<h2>Subtitle of the home page</h2>
-				<a href="" class="button"> register</a>
-				<a href="" class="button"> login</a>
-
-				
-			</div>
-
-		</div>
-	</section>
+lsajdlkajsdlkjasldja
 
 	<section class="cards clearfix">
 		<div class="card">
