Update css header

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					</ul>
 				</li>
 				<li class="header-nav__item"><a href="#home">plans</a></li>
-				<li class="header-nav__item"><a class="button outline" href="#home">log in</a></li>
+				<li class="header-nav__item"><a class="button-outline" href="#home">log in</a></li>
 				<li class="header-nav__item"><a class="button" href="#home">start free</a></li>
 			</ul>
 		</nav>
