--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-<<<<<<< HEAD
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.css">
@@ -10,6 +9,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+
+
+	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+	<script src='assets/zoey.js'></script>
 </head>
 
 <body>
@@ -70,139 +74,7 @@
     <!--   ****** ZOEY ****  -->
     <!-- section 4 -->
 
-    <section class="section-4">
-        <header class="section-4-header">
-            <h1 class="section-4-header__title grey-title">Explore Bonsai.</h1>
-
-            <ul class="section-4-header__list">
-
-                <li>PROPOSALS</li>
-                <li>CONTRACTS</li>
-                <li>TIME TRACKING</li>
-                <li>INVOICING</li>
-                <li>REPORTING</li>
-
-            </ul>
-        </header>
-        <article class="section-4-main">
-            <div class="section-4-main__item1">
-                <div><img src="assets/img/asset 9.png" alt="proposals"></div>
-            </div>
-            <div class="section-4-main__item2">
-
-                <div class="section-4-main__moving"><img src="assets/img/asset 3.png" alt="proposal"></div>
-                <h2>Send proffesional proposals and close more deals.</h2>
-                <p>Structure your next proposal in a few clicks and generate a clear estimates that you will help you
-                    close your next deal.</p>
-                <p class="">Learn about proposals <i class="fas fa-chevron-right"> </i></p>
-
-            </div>
-        </article>
-        <a href="#home" class="section-4__button">START FREE</a>
-
-
-    </section>
-
-    <!-- section 5 -->
-
-    <section class="section-5">
-        <header class="section-5-header">
-            <h1 class="section-5-header__title">Go global with Bonsai.</h1>
-            <h2 class="section-5-header__subtitle">We're there for you anywhere and allow to work with clients
-                everywhere.</h2>
-        </header>
-        <div class="section-5-main">
-            <div class="section-5-main__item">
-                <div class="section-5-main__moving"><img src="assets/img/asset 14.png"></div>
-                <p>international contracts</p>
-            </div>
-            <div class="section-5-main__item">
-                <div class="section-5-main__moving"><img src="assets/img/asset 15.png"></div>
-                <p>180 currencies</p>
-            </div>
-            <div class="section-5-main__item">
-                <div class="section-5-main__moving"><img src="assets/img/asset 16.png"></div>
-                <p>Global payments</p>
-            </div>
-
-
-        </div>
-        <div class="section-5-main__footer"><a href="#home" class="section-5__button">START FREE</a></div>
-
-    </section>
-    <!-- ******** zoey
-        section 6 ********** -->
-
-    <section class="section-6">
-        <div class="section-6-part1">
-            <h1 class="section-6-part1__title">Empowering 40,000 freelancers from all backgrounds.</h1>
-            <p>Bonsai supports every type of freelance work.We've built Bonsai to fit every workflow so everyone feels
-                protected.</p>
-            <p>Bonsai helps every freelancer put their work on autopilot. </p>
-            <a href="#home" class="section-6__button">START FREE</a>
-        </div>
-
-        <div class="section-6-part2">
-            <ul>
-                <li><img src="assets/img/asset 17.png" width="45"> Designers</li>
-                <li><img src="assets/img/asset 18.png" width="45"> Developers</li>
-                <li><img src="assets/img/asset 19.png" width="45"> Writers</li>
-                <li><img src="assets/img/asset 20.png" width="45"> Photographers</li>
-                <li><img src="assets/img/asset 21.png" width="45"> Videographers</li>
-                <li><img src="assets/img/asset 22.png" width="45"> Consultants</li>
-
-            </ul>
-
-        </div>
-
-    </section>
-
-</main>
-
-<footer>
-
-</footer>
-
-<script type="text/javascript" src="assets/style.js"></script>
-=======
-	<meta charset="UTF-8">
-	<title>Document</title>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.css">
-	<link rel="stylesheet" href="assets/style.css">
-	<!-- <link rel="stylesheet" type="text/css" href="assets/fonts.css" /> -->
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-
-	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-
-	<script src='assets/1.js'></script>
-</head>
-
-<body>
-	<header class="header">
-		<nav class="header-nav">
-			<div class="header-nav__logo">
-				<a href="#home">
-					<img src="assets/img/bonsai_logo.png" alt="">
-				</a>
-			</div>
-			<ul	class="header-nav__menu">
-				<li class="header-nav__item"><a href="#home">product <i class="fas fa-chevron-down"></i></a></li>
-				<li class="header-nav__item"><a href="#home">resources<i class="fas fa-chevron-down"></i></a></li>
-				<li class="header-nav__item"><a href="#home">plans</a></li>
-				<li class="header-nav__item"><a class="button outline" href="#home">log in</a></li>
-				<li class="header-nav__item"><a class="button" href="#home">start free</a></li>
-			</ul>
-		</nav>
-	</header>
-	<main class="main-container">
-
-		<!--   ****** ZOEY ****  -->
-		<!-- section 4 -->
-
-		<section class="section-4">
+   <section class="section-4">
 			<header class="section-4-header">
 				<h1 class="section-4-header__title">Explore Bonsai.</h1>
 			</header>					
