update header css

--- a/index.html
+++ b/index.html
@@ -27,36 +27,16 @@
                 </div>
                 <ul class="header-nav__menu">
                     <li class="header-nav__item">
-                        <a onclick="myFunction()" class="dropbtn">product
-                            <i class="fas fa-chevron-down"></i>
-                        </a>
+                        <a onclick="myFunction()" class="dropbtn">product<i class="fas fa-chevron-down"></i></a>
                         <ul id="product-dropdown" class="header-dropdown">
-                            <li>
-                                <a href="#home">PROPOSALS</a>
-                            </li>
-                            <li>
-                                <a href="#home">CONTRACTS</a>
-                            </li>
-                            <li>
-                                <a href="#home">TIME TRACKING</a>
-                            </li>
-                            <li>
-                                <a href="#home">PROJECTS</a>
-                            </li>
-                            <li>
-                                <a href="#home">EXPENSES</a>
-                            </li>
-                            <li>
-                                <a href="#home">INVOICES & PAYMENTS</a>
-                            </li>
-                            <li>
-                                <a href="#home">RECURRING PAYMENTS
-                                    <sup>NEW</sup>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#home">REPORTING</a>
-                            </li>
+                            <li><a href="#home">PROPOSALS</a></li>
+                            <li><a href="#home">CONTRACTS</a></li>
+                            <li><a href="#home">TIME TRACKING</a></li>
+                            <li><a href="#home">PROJECTS</a></li>
+                            <li><a href="#home">EXPENSES</a></li>
+                            <li><a href="#home">INVOICES & PAYMENTS</a></li>
+                            <li><a href="#home">RECURRING PAYMENTS<sup>NEW</sup></a></li>
+                            <li><a href="#home">REPORTING</a></li>
                         </ul>
                     </li>
                     <li class="header-nav__item">
@@ -64,21 +44,11 @@
                             <i class="fas fa-chevron-down"></i>
                         </a>
                         <ul id="resources-dropdown" class="header-dropdown">
-                            <li>
-                                <a href="#home">FREELANCE BLOG</a>
-                            </li>
-                            <li>
-                                <a href="#home">FREELANCE RATES</a>
-                            </li>
-                            <li>
-                                <a href="#home">FREELANCE RESOURCES</a>
-                            </li>
-                            <li>
-                                <a href="#home">TOOLS DIRECTORY</a>
-                            </li>
-                            <li>
-                                <a href="#home">SUBCONTRACTING TOOLKITS</a>
-                            </li>
+                            <li><a href="#home">FREELANCE BLOG</a></li>
+                            <li><a href="#home">FREELANCE RATES</a></li>
+                            <li><a href="#home">FREELANCE RESOURCES</a></li>
+                            <li><a href="#home">TOOLS DIRECTORY</a></li>
+                            <li><a href="#home">SUBCONTRACTING TOOLKITS</a></li>
                         </ul>
                     </li>
                     <li class="header-nav__item">
@@ -92,19 +62,6 @@
                     </li>
                 </ul>
             </li>
-            <li class="header-nav__item">
-                <a onclick="myFunction2()" class="dropbtn">resources <i class="fas fa-chevron-down"></i></a>
-                <ul id="resources-dropdown" class="header-dropdown">
-                    <li><a href="#home">FREELANCE BLOG</a></li>
-                    <li><a href="#home">FREELANCE RATES</a></li>
-                    <li><a href="#home">FREELANCE RESOURCES</a></li>
-                    <li><a href="#home">TOOLS DIRECTORY</a></li>
-                    <li><a href="#home">SUBCONTRACTING TOOLKITS</a></li>
-                </ul>
-            </li>
-            <li class="header-nav__item"><a href="#home">plans</a></li>
-            <li class="header-nav__item"><a class="button outline" href="#home">log in</a></li>
-            <li class="header-nav__item"><a class="button" href="#home">start free</a></li>
         </ul>
     </nav>
 </header>
