update header css

--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
                         </ul>
                     </li>
                     <li class="header-nav__item">
-                        <a onclick="myFunction2()" class="dropbtn">resources
-                            <i class="fas fa-chevron-down"></i>
-                        </a>
+                        <a onclick="myFunction2()" class="dropbtn">resources<i class="fas fa-chevron-down"></i></a>
                         <ul id="resources-dropdown" class="header-dropdown">
                             <li><a href="#home">FREELANCE BLOG</a></li>
                             <li><a href="#home">FREELANCE RATES</a></li>
@@ -61,10 +59,8 @@
                         <a class="button" href="#home">start free</a>
                     </li>
                 </ul>
-            </li>
-        </ul>
-    </nav>
-</header>
+            </nav>
+        </header>
 <main class="container">
 
     <!-- ***** Nils ***** -->
