--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.css">
     <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/media.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
@@ -18,7 +19,7 @@
 
 <body>
     <div class="container">
-    	<!--
+    
         <header class="header">
             <nav class="header-nav">
                 <div class="header-nav__logo">
@@ -62,12 +63,11 @@
                 </ul>
             </nav>
         </header>
-    -->
 <main class="container">
 
     <!-- ***** Nils ***** -->
     <!-- ***** section 1 -->
-<!--
+
     <div class="section-1">
         <div class="section-1-part1">
             <h1>Put your freelancing on autopilot.</h1>
@@ -75,11 +75,14 @@
                 <br>
                 for the world's best <strong>creative</strong>
                 freelancers.</p>
-            <a id="section-1-button" href="#">START FREE</a>
+            <a class="section-1-button" href="#">START FREE</a>
+            <div><img src="assets/img/asset 2.png"></div>
         </div>
-    <div class="section-1-part2">Image</div>
+    <div class="section-1-part2">
+    	<img src="assets/img/asset 1.png">
     </div>
-    -->
+    </div>
+   
     <!--   ****** ZOEY ****  -->
     <!-- section 4 -->
 
