remove main tag

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 
 <body>
     <div class="container">
-    
         <header class="header">
             <nav class="header-nav">
                 <div class="header-nav__logo">
@@ -63,24 +62,21 @@
                 </ul>
             </nav>
         </header>
-<main class="container">
 
-    <!-- ***** Nils ***** -->
+    <!-- ***** Lazycesar ***** -->
     <!-- ***** section 1 -->
-
-    <div class="section-1">
-        <div class="section-1-part1">
-            <h1>Put your freelancing on autopilot.</h1>
-            <p>All-in-one freelancing solution
-                <br>
-                for the world's best <strong>creative</strong>
-                freelancers.</p>
-            <a class="section-1-button" href="#">START FREE</a>
-            <div><img src="assets/img/asset 2.png"></div>
-        </div>
-    <div class="section-1-part2">
-    	<img src="assets/img/asset 1.png">
-    </div>
+    <div class="section-grey">
+		<div class="section-1">
+			<div class="section-1-part1">
+				<h1>Put your freelancing <br class="breakText"> on autopilot.</h1>
+				<p>All-in-one freelancing solution<br>for the world's best <strong>creative</strong>freelancers.</p>
+				<a class="button" href="#">start free</a>
+				<div><img src="assets/img/asset 2.png"></div>
+			</div>
+			<div class="section-1-part2">
+				<img src="assets/img/asset 1.png">
+			</div>
+		</div>
     </div>
    
     <!--   ****** ZOEY ****  -->
@@ -205,12 +201,11 @@
 			</div>
 			
 		</section>
-	</main>
 
 	<footer>
 
 	</footer>
-	
+    </div>
 <script type="text/javascript" src="assets/style.js"></script>
 </body>
 </html>
