--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
    
     <!--   ****** ZOEY ****  -->
     <!-- section 4 -->
-
+ 
    <section class="section-4">
 			<header class="section-4-header">
 				<h1 class="section-4-header__title">Explore Bonsai.</h1>
@@ -160,7 +160,7 @@
 		</section>
 
 		<!-- section 5 -->
-
+  
 		<section class="section-5">
 			<header class="section-5-header">
 				<h1 class="section-5-header__title">Go global with Bonsai.</h1>
@@ -195,12 +195,12 @@
 
 			<div class="section-6-part2">
 				<ul>
-					<li><img src="assets/img/asset 17.png" width="45">  Designers</li>
-					<li><img src="assets/img/asset 18.png" width="45">  Developers</li>
-					<li><img src="assets/img/asset 19.png" width="45">  Writers</li>
-					<li><img src="assets/img/asset 20.png" width="45">  Photographers</li>
-					<li><img src="assets/img/asset 21.png" width="45">  Videographers</li>
-					<li><img src="assets/img/asset 22.png" width="45">  Consultants</li>
+					<li><img src="assets/img/asset 17.png" width="45"><span> Designers</span></li>
+					<li><img src="assets/img/asset 18.png" width="45"><span> Developers</span></li>
+					<li><img src="assets/img/asset 19.png" width="45"><span> Writers</span></li>
+					<li><img src="assets/img/asset 20.png" width="45"><span> Photographers</span></li>
+					<li><img src="assets/img/asset 21.png" width="45"><span> Videographers</span></li>
+					<li><img src="assets/img/asset 22.png" width="45"><span> Consultants</span></li>
 				</ul>
 			</div>
 			
