test first section

--- a/index.html
+++ b/index.html
@@ -69,9 +69,11 @@
 		<div class="section-1">
 			<div class="section-1-part1">
 				<h1>Put your freelancing <br class="breakText"> on autopilot.</h1>
-				<p>All-in-one freelancing solution<br>for the world's best <strong>creative</strong>freelancers.</p>
+				<p>All-in-one freelancing solution<br>for the world's best <strong>creative</strong> freelancers.</p>
 				<a class="button" href="#">start free</a>
-				<div><img src="assets/img/asset 2.png"></div>
+				<div>
+					<img src="assets/img/asset 2.png">
+				</div>
 			</div>
 			<div class="section-1-part2">
 				<img src="assets/img/asset 1.png">
