--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 		</section>
 
 		<!-- section 5 -->
-  
+    <div class="section-grey">
 		<section class="section-5">
 			<header class="section-5-header">
 				<h1 class="section-5-header__title">Go global with Bonsai.</h1>
@@ -179,6 +179,7 @@
 			<div class="section-5-main__footer"><a href="#home" class="section-5__button">START FREE</a></div>
 			
 		</section>
+	</div>
 		<!--section 6  -->
 
 		<section class="section-6">
