CSS cleaning of the first section

--- a/index.html
+++ b/index.html
@@ -66,18 +66,14 @@
     <!-- ***** Lazycesar ***** -->
     <!-- ***** section 1 -->
     <div class="section-grey">
-		<div class="section-1">
-			<div class="section-1-part1">
+		<div class="dashboard">
+			<div class="dashboard-text">
 				<h1>Put your freelancing <br class="breakText"> on autopilot.</h1>
 				<p>All-in-one freelancing solution<br>for the world's best <strong>creative</strong> freelancers.</p>
 				<a class="button" href="#">start free</a>
-				<div>
-					<img src="assets/img/asset 2.png">
-				</div>
+				<img class="dashboard-logos" src="assets/img/asset 2.png">
 			</div>
-			<div class="section-1-part2">
-				<img src="assets/img/asset 1.png">
-			</div>
+			<img class="dashboard-img " src="assets/img/asset 1.png">
 		</div>
     </div>
    
