update first section

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 			<div class="dashboard-text">
 				<h1>Put your freelancing <br class="breakText"> on autopilot.</h1>
 				<p>All-in-one freelancing solution<br>for the world's best <strong>creative</strong> freelancers.</p>
-				<a class="button" href="#">start free</a>
+				<a class="button button--hover" href="#">start free</a>
 				<img class="dashboard-logos" src="assets/img/asset 2.png">
 			</div>
 			<img class="dashboard-img " src="assets/img/asset 1.png">
