--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 </div>
                 <div class="section-4-main__item2">
                     <div class="section-4-main__moving"><img src="assets/img/asset 3.png" alt="proposal"></div>
-                    <h2>Send proffesional proposals and close more deals.</h2>
+                    <h1>Send proffesional proposals and close more deals.</h1>
                     <p>Structure your next proposal in a few clicks and generate a clear estimates that you will help
                         you close your next deal.</p>
                     <p><a href="#"> Learn about proposals <i class="fas fa-chevron-right"> </i></a></p>
@@ -111,7 +111,7 @@
                 </div>
                 <div class="section-4-main__item2">
                     <div class="section-4-main__moving"><img src="assets/img/asset 4.png" alt="proposal"></div>
-                    <h2>Create and e-sign solid work contracts.</h2>
+                    <h1>Create and e-sign solid work contracts.</h1>
                     <p>Answer a few questions to generate your contract from a vetted template. Send it to the client to
                         securely e-sign in minutes.</p>
                     <p><a href="#">Learn about contracts <i class="fas fa-chevron-right"> </i></a></p>
@@ -124,7 +124,7 @@
                 </div>
                 <div class="section-4-main__item2">
                     <div class="section-4-main__moving"><img src="assets/img/asset 5.png" alt="proposal"></div>
-                    <h2>Track time and never miss a second.</h2>
+                    <h1>Track time and never miss a second.</h1>
                     <p>Track time seamlessly, automatically fill in your time sheets and generate invoices to get paid
                         in a click.</p>
                     <p><a href="#">Learn about time tracking <i class="fas fa-chevron-right"> </i></a></p>
@@ -136,7 +136,7 @@
                 </div>
                 <div class="section-4-main__item2">
                     <div class="section-4-main__moving"><img src="assets/img/asset 6.png" alt="proposal"></div>
-                    <h2>Send beautiful, branded invoices and get paid faster.</h2>
+                    <h1>Send beautiful, branded invoices and get paid faster.</h1>
                     <p>Build, customize and send invoices with automatic reminders to get paid with bank transfer,
                         credit card or Paypal.</p>
                     <p><a href="#">Learn about invoicing <i class="fas fa-chevron-right"> </i></a></p>
@@ -149,7 +149,7 @@
                 </div>
                 <div class="section-4-main__item2">
                     <div class="section-4-main__moving"><img src="assets/img/asset 7.png" alt="proposal"></div>
-                    <h2>Analyze your earnings and stay clear on your goals.</h2>
+                    <h1>Analyze your earnings and stay clear on your goals.</h1>
                     <p>Access your workload in a simple dashboard and monitor the status of your contracts and invoices
                         in one comprehensive interface.</p>
                 </div>
@@ -167,10 +167,11 @@
                     everywhere.</h2>
             </header>
             <div class="section-5-main">
-                <div class="section-5-main__item">
-                    <div class="section-5-main__moving"><img src="assets/img/asset 14.png"></div>
-                    <p>international contracts</p>
-                </div>
+                <div>
+                    <div class="section-5-main__item">
+                        <div class="section-5-main__moving"><img src="assets/img/asset 14.png"></div>
+                        <p>international contracts</p>
+                    </div>
                 <div class="section-5-main__item">
                     <div class="section-5-main__moving"><img src="assets/img/asset 15.png"></div>
                     <p>180 currencies</p>
@@ -178,10 +179,10 @@
                 <div class="section-5-main__item">
                     <div class="section-5-main__moving"><img src="assets/img/asset 16.png"></div>
                     <p>Global payments</p>
+                </div>  
                 </div>
+                <a href="#home" class="section-5__button">START FREE</a>
             </div>
-            <div class="section-5-main__footer"><a href="#home" class="section-5__button">START FREE</a></div>
-
         </section>
     </div>
     <!--section 6  -->
