--- a/index.html
+++ b/index.html
@@ -66,7 +66,86 @@
     <!-- ***** Negator ***** -->
     <!-- ***** section 1 -->
 
+    <!--   ****** ZOEY ****  -->
+    <!-- section 2 -->
+    <section class="section-2">
+        <div class="section-2-part1">
+            <div class="section-2-part1__items">
+                <a href="">
+                    <img src="assets/img/asset 3.png">
+                    <p>Proposals</p>
+                </a>
+            </div>
+            <div class="section-2-part1__items">
+                <a href="">
+                    <img src="assets/img/asset 4.png">
+                    <p>Contracts</p>
+                </a>
+            </div>
+            <div class="section-2-part1__items">
+                <a href="">
+                    <img src="assets/img/asset 5.png">
+                    <p>Time tracking</p>
+                </a>
+            </div>
+            <div class="section-2-part1__items">
+                <a href="">
+                    <img src="assets/img/asset 6.png">
+                    <p>Invoicing & paynents</p>
+                </a>
+            </div>
+            <div class="section-2-part1__items">
+                <a href="">
+                    <img src="assets/img/asset 7.png">
+                    <p>Peace of mind</p>
+                </a>
+            </div>
+            <div class="section-2-part1__items">
+                <a href="">
+                    <img src="assets/img/asset 8.png">
+                    <p>Reporting</p>
+                </a>
+            </div>
+        </div>
+        <div class="section-2-part2">
+            <h1>Everything you need<br>for your freelance business.</h1>
+            <p>Bonsai is the first all-in-one freelancing solution designed to help you do more.</p>
+            <p>Bonsai products are deeply integrated so you don't need to enter the same information again and again. Your client accepts a proposal, we auto-draft your contract. Your client signs a contract, we auto-generate the invoices.</p>
+            <p>You focus on the work you love and we handle the rest.</p>
+            <br>
+            <br>
+            <a href="#home" class="section-2__button">START FREE</a>
+        </div>
 
+    </section>
+    <!--   ****** ZOEY ****  -->
+    <!-- section 2 -->
+    <section class="section-3">
+        <h1>Giving you what's best.</h1>
+        <div class="section-3-main">
+            <div class="section-3-main__items section-3-main__item1">
+                <h2>Get paid faster</h2>
+                <p>Freelancers get paid an average of 13 days faster, and have 3x fewer late payments with Bonsai.</p>
+            </div>
+            <div class="section-3-main__items section-3-main__item2">
+                <h2>Save time</h2>
+                <p>Bonsai automatically generates and fills all your documents as soon as you start a new project. Less worry, more time.</p>
+            </div>
+            <div class="section-3-main__items section-3-main__item3">
+                <h2>Protect your business</h2>
+                <p>With templated contracts and legally binding e-signature, Bonsai helps you cover your business.
+                </p>
+            </div>
+            <div class="section-3-main__items section-3-main__item4">
+                <h2>Get peace of mind</h2>
+                <p>Because everything is organized, you'll never worry again about missing a deadline or forgetting a document.</p>
+            </div>
+        </div>
+        <div>
+           <a href="#home" class="section-3__button button">START FREE</a> 
+        </div>
+        
+    </section>
     <!--   ****** ZOEY ****  -->
     <!-- section 4 -->
 
