responsive header renames style.js

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <img src="assets/img/bonsai_logo.png" alt="">
                     </a>
                 </div>
-                <nav>
+                
                     <ul class="header-menu animate">
                         <li class="header-menu__item">
                             <a onclick="myFunction()" class="dropbtn">product<i class="fas fa-chevron-down"></i></a>
@@ -60,17 +60,15 @@
                         <a class="button" href="#home">start free</a>
                     </li>
                 </ul>
-            </nav>
-            <a href="" class="header__icon-bar">
-                <span></span>
-                <span></span>
-                <span></span>
-            </a>
+                <a href="" class="header__icon-bar">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </a>
         </div>
         </header>
-        
-        <!-- ***** Negator ***** -->
-        <!-- ***** section 1 -->
+    <!--   ****** ZOEY ****  -->
+    <!-- section 1 -->
 
     <!--   ****** ZOEY ****  -->
     <!-- section 2 -->
@@ -434,6 +432,6 @@
             </div>
         </div>
     </footer>
-    <script type="text/javascript" src="assets/style.js"></script>
+    <script type="text/javascript" src="assets/script.js"></script>
 </body>
 </html>
