--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@
             <div class="section-2-part1__items">
                 <a href="">
                     <img src="assets/img/asset 7.png">
-                    <p>Peace of mind</p>
+                    <p>Reporting</p>
                 </a>
             </div>
             <div class="section-2-part1__items">
                 <a href="">
                     <img src="assets/img/asset 8.png">
-                    <p>Reporting</p>
+                    <p>Peace of mind</p>
                 </a>
             </div>
         </div>
@@ -124,7 +124,8 @@
         </div>
     </section>
     <!--   ****** ZOEY ****  -->
-    <!-- section 2 -->
+    <!-- section 3 -->
+    <div class="section-grey">
     <section class="section-3">
         <h1>Giving you what's best.</h1>
         <div class="section-3-main">
@@ -151,6 +152,7 @@
         </div>
         
     </section>
+</div>
     <!--   ****** ZOEY ****  -->
     <!-- section 4 -->
         <section class="section-4">
