--- a/index.html
+++ b/index.html
@@ -67,8 +67,19 @@
                 </a>
         </div>
         </header>
-    <!--   ****** ZOEY ****  -->
-    <!-- section 1 -->
+    <!-- ***** Lazycesar ***** -->
+    <!-- ***** section 1 -->
+    <div class="section-grey">
+        <div class="dashboard">
+            <div class="dashboard-text">
+                <h1>Put your freelancing <br class="breakText"> on autopilot.</h1>
+                <p>All-in-one freelancing solution<br>for the world's best <strong>creative</strong> freelancers.</p>
+                <a class="button button--hover" href="#">start free</a>
+                <img class="dashboard-logos" src="assets/img/asset 2.png">
+            </div>
+            <img class="dashboard-img " src="assets/img/asset 1.png">
+        </div>
+    </div>
 
     <!--   ****** ZOEY ****  -->
     <!-- section 2 -->
