--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <p>You focus on the work you love and we handle the rest.</p>
             <br>
             <br>
-            <a href="#home" class="section-2__button">START FREE</a>
+            <a href="#home" class="button button--hover">START FREE</a>
         </div>
     </section>
     <!--   ****** ZOEY ****  -->
@@ -157,7 +157,7 @@
             </div>
         </div>
         <div>
-           <a href="#home" class="section-3__button button">START FREE</a> 
+           <a href="#home" class="section-3__button button button--hover">START FREE</a> 
         </div>
         
     </section>
@@ -244,7 +244,7 @@
                     </div>
                 </div>
             </div>
-            <a href="#home" class="section-4__button">START FREE</a>
+            <a href="#home" class="section-4__button button button--hover">START FREE</a>
         </section>
        <!--   ****** ZOEY ****  -->
         <!-- section 5 -->
@@ -270,7 +270,7 @@
                             <p>Global payments</p>
                         </div>
                     </div>
-                    <a href="#home" class="section-5__button">START FREE</a>
+                    <a href="#home" class="section-5__button button button--hover">START FREE</a>
                 </div>
             </section>
         </div>
@@ -282,7 +282,7 @@
                 <p>Bonsai supports every type of freelance work.We've built Bonsai to fit every workflow so everyone feels protected.
                 </p>
                 <p>Bonsai helps every freelancer put their work on autopilot. </p>
-                <a href="#home" class="section-6__button">START FREE</a>
+                <a href="#home" class="section-6__button button button--hover">START FREE</a>
             </div>
             <div class="section-6-part2">
                 <ul>
