make tabs with javascript

--- a/index.html
+++ b/index.html
@@ -171,22 +171,22 @@
             <div id="tabs">
                 <ul class="section-4-main__tabs">
                     <li class="section-4-list">
-                        <a href="#tabs-1" class="active-tab"> PROPOSALS</a>
+                        <button class="section-4-list__link" id="tabs-1"  class="active-tab"> PROPOSALS</button>
                     </li>
                     <li class="section-4-list">
-                        <a href="#tabs-2"> CONTRACTS</a>
+                        <button class="section-4-list__link" id="tabs-2" href="#tabs-2"> CONTRACTS</button>
                     </li>
                     <li class="section-4-list">
-                        <a href="#tabs-3"> TIME TRACKING</a>
+                        <button class="section-4-list__link" id="tabs-3" href="#tabs-3"> TIME TRACKING</button>
                     </li>
                     <li class="section-4-list">
-                        <a href="#tabs-4"> INVOICING</a>
+                        <button class="section-4-list__link" id="tabs-4" href="#tabs-4"> INVOICING</button>
                     </li>
                     <li class="section-4-list">
-                        <a href="#tabs-5"> REPORTING</a>
+                        <button class="section-4-list__link" id="tabs-5" href="#tabs-5"> REPORTING</button>
                     </li>
                 </ul>
-                <div id="tabs-1">
+                <div id="tabs-1" class="tab-content active-content">
                     <div class="section-4-main__item1">
                         <div><img src="assets/img/asset 9.png" alt="proposals"></div>
                     </div>
@@ -198,7 +198,7 @@
 
                     </div>
                 </div>
-                <div id="tabs-2">
+                <div id="tabs-2" class="tab-content">
                     <div class="section-4-main__item1">
                         <div><img src="assets/img/asset 10.png" alt="proposals"></div>
                     </div>
@@ -210,7 +210,7 @@
                         <p><a href="#">See a sample contract <i class="fas fa-chevron-right"> </i></a></p>
                     </div>
                 </div>
-                <div id="tabs-3">
+                <div id="tabs-3" class="tab-content">
                     <div class="section-4-main__item1">
                         <div><img src="assets/img/asset 11.png" alt="proposals"></div>
                     </div>
@@ -221,7 +221,7 @@
                         <p><a href="#">Learn about time tracking <i class="fas fa-chevron-right"> </i></a></p>
                     </div>
                 </div>
-                <div id="tabs-4">
+                <div id="tabs-4" class="tab-content">
                     <div class="section-4-main__item1">
                         <div><img src="assets/img/asset 12.png" alt="proposals"></div>
                     </div>
@@ -233,7 +233,7 @@
                         <p><a href="#">See sample invoice <i class="fas fa-chevron-right"> </i></a></p>
                     </div>
                 </div>
-                <div id="tabs-5">
+                <div id="tabs-5" class="tab-content">
                     <div class="section-4-main__item1">
                         <div><img src="assets/img/asset 13.png" alt="proposals"></div>
                     </div>
