make tabs with javascript

--- a/index.html
+++ b/index.html
@@ -174,16 +174,16 @@
                         <button class="section-4-list__link" id="tabs-1"  class="active-tab"> PROPOSALS</button>
                     </li>
                     <li class="section-4-list">
-                        <button class="section-4-list__link" id="tabs-2" href="#tabs-2"> CONTRACTS</button>
+                        <button class="section-4-list__link" id="tabs-2"> CONTRACTS</button>
                     </li>
                     <li class="section-4-list">
-                        <button class="section-4-list__link" id="tabs-3" href="#tabs-3"> TIME TRACKING</button>
+                        <button class="section-4-list__link" id="tabs-3"> TIME TRACKING</button>
                     </li>
                     <li class="section-4-list">
-                        <button class="section-4-list__link" id="tabs-4" href="#tabs-4"> INVOICING</button>
+                        <button class="section-4-list__link" id="tabs-4"> INVOICING</button>
                     </li>
                     <li class="section-4-list">
-                        <button class="section-4-list__link" id="tabs-5" href="#tabs-5"> REPORTING</button>
+                        <button class="section-4-list__link" id="tabs-5"> REPORTING</button>
                     </li>
                 </ul>
                 <div id="tabs-1" class="tab-content active-content">
