fixed the media.css file

--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
                 <a class="button button--hover" href="#">start free</a>
                 <img class="dashboard-logos" src="assets/img/asset 2.png">
             </div>
-            <img class="dashboard-img " src="assets/img/asset 1.png">
+            <div class="dashboard-img">
+                <img src="assets/img/asset 1.png">
+            </div>
         </div>
     </div>
 
